Version 0.2.0 (2014-xx-xx)
--------------------------
Started sending event vendor parameter through on querystring (#55)
Changed track screen view to use an unstructured event (#53)
Added ability to name individual instances of the Python Tracker (#52) (TODO)
Validated GET payload in all integration tests (#33) (TODO)
Added support for Python 3.2 (#41) (TODO)
Added support for Python 2.7 (#42) (TODO)
Fixed versions in requirements.txt (#47)
Added platform and tracker version to payload (#50)
Changed tracker version prefix from "python-" to "py-" (#51)

Version 0.1.0 (2014-28-03)
--------------------------
Initial release